fix img in index. whit z-index 999

--- a/ForceUni Final/css/index.css
+++ b/ForceUni Final/css/index.css
@@ -51,6 +51,7 @@ ul li {
     width: 100%;  
     display: block;
     padding: 0 30%;
+    z-index: 999;
 }
 
 .continue-btn{
